# midistats

./: .gitignore  README.md  pyproject.toml
src/: example.py
src/midiparse/: midiparse.py
