[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "midistats"
description = "tools for generating summary stats from a midi file"
version = "0.0.0"
authors = [
    { name = "Michael Vickers", email = "vickers.mike@gmail.com" }
]
dependencies = [
    "mido >= 1.2.10",
    "setuptools >= 44.0.0",
]
